<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cocoawerks</groupId>
    <artifactId>MosaicRouter</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <spring.version>3.4.4</spring.version>
        <gwt.version>2.12.2</gwt.version>
        <gwt.module>com.cocoawerks.mosaic.router.MosaicRouter</gwt.module>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <plugin.prettier.goal>write</plugin.prettier.goal>
    </properties>

    <profiles>
        <profile>
            <id>gwt-codeserver</id>
            <dependencies>
                <dependency>
                    <groupId>org.gwtproject</groupId>
                    <artifactId>gwt-dev</artifactId>
                    <version>${gwt.version}</version>
                </dependency>
            </dependencies>
        </profile>

    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.gwtproject</groupId>
                <artifactId>gwt</artifactId>
                <version>${gwt.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.gwtproject</groupId>
            <artifactId>gwt-user</artifactId>
        </dependency>

        <!-- Mosaic client side -->
        <dependency>
            <groupId>com.cocoawerks</groupId>
            <artifactId>MosaicGWT</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.cocoawerks</groupId>
            <artifactId>MosaicServer</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>


    </dependencies>


    <build>
        <plugins>
            <!-- GWT -->
            <plugin>
                <groupId>net.ltgt.gwt.maven</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>1.1.0</version>
                <extensions>true</extensions>
                <configuration>
                    <moduleName>
                        ${gwt.module}
                    </moduleName>
                    <sourceLevel>11</sourceLevel>
                    <workDir>${basedir}/target/gwt/workDir</workDir>
                    <compilerArgs>
                        <arg>-gen</arg>
                        <arg>${basedir}/target/gwt/gen</arg>
                    </compilerArgs>
                    <launcherDir>${basedir}/target/classes/public</launcherDir>
                </configuration>
            </plugin>

            <!-- Prettier -->
            <plugin>
                <groupId>com.hubspot.maven.plugins</groupId>
                <artifactId>prettier-maven-plugin</artifactId>
                <version>0.22</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>${plugin.prettier.goal}</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        -XX:TieredStopAtLevel=1
                    </jvmArguments>
                </configuration>
                <version>${spring.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>